--- a/QLPhongMachTu(DOAN)/GUI/Login.resx
+++ b/QLPhongMachTu(DOAN)/GUI/Login.resx
@@ -117,4 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="textBox3.Text" xml:space="preserve">
+    <value>MACINE: Là phần mềm hỗ trợ quản lý phòng khám trực tuyến (Có thể theo dõi và quản lý ngay trên điện thoại). Với các tính năng phát triển dựa trên quy trình khám chữa bệnh thực tế của các phòng khám tư nhân.</value>
+  </data>
 </root>
